tests/baselines/reference/jsdocFunctionTypeFalsePositive.errors.txt
/a.js(1,13): error TS1098: Type parameter list cannot be empty.
/a.js(1,14): error TS1139: Type parameter declaration expected.


==== /a.js (2 errors) ====
    /** @param {<} x */
                ~~
!!! error TS1098: Type parameter list cannot be empty.
                 ~
!!! error TS1139: Type parameter declaration expected.
    function f(x) {}
    